--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -76,6 +76,7 @@ html, body {
         border: 1px solid #ccc;
         border-radius: 5px;
         text-align: right;
+        margin-right: 0;
 
         .menu-icon {
             display: block;
